--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "# Vehicles EDA\n",
+    "# VEHICLES_US.CSV data gives the general information of a vehicle from the price to the color of the car\n",
     "# In this notebook we will access the vehicles file and do some EDA to make it more user friendly to the public\n",
     "\n",
     "import pandas as pd\n",
@@ -158,6 +159,37 @@
    ],
    "source": [
     "print(vehicles.describe(include='all'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows: 0\n",
+      "\n",
+      "Duplicated Rows:\n",
+      "Empty DataFrame\n",
+      "Columns: [price, model_year, model, condition, cylinders, fuel, odometer, transmission, type, paint_color, is_4wd, date_posted, days_listed]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for duplicates\n",
+    "duplicates = vehicles.duplicated()\n",
+    "print(f\"Number of duplicate rows: {duplicates.sum()}\")\n",
+    "\n",
+    "# Print duplicated rows\n",
+    "print(\"\\nDuplicated Rows:\")\n",
+    "print(vehicles[duplicates])\n",
+    "\n",
+    "# Drop duplicate rows\n",
+    "vehicles_cleaned = vehicles.drop_duplicates()"
    ]
   },
   {
